--- a/FeedMe/src/main/webapp/resources/styles/header.css
+++ b/FeedMe/src/main/webapp/resources/styles/header.css
@@ -9,6 +9,11 @@
 	font-weight: bold;
 }
 
+.nav {
+  background-color: black;
+}
+
+
 .navbar #mynavbar ul li a{
 	color: #fff;
 }
