--- a/FeedMe/src/main/webapp/resources/styles/restaurant.css
+++ b/FeedMe/src/main/webapp/resources/styles/restaurant.css
@@ -6,7 +6,7 @@
 
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-    padding-left: 30%;
+    /* padding-left: 40%; */
 }
 
 .thumbnail img {
